5340 Simplify SQS tests